2010-04-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Case-insensitive subsystem name matching revisited.

	* src/pkgfind.cpp (pkgXmlDocument::FindPackageByName): Use...
	(subsystem_strcmp): ...this to match subsystem names, instead of...
	(match_if_explicit): ...this.

2010-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Enable recursive processing of repository package lists.

	* src/pkgbase.h (pkgXmlDocument::SyncRepository): Make it public.

	* src/pkgbind.cpp (pkgRepository): New locally defined and implemented
	class; it facilitates recursive loading and parsing of package lists,
	replacing much of the original non-recursive functionality within...
	(pkgXmlDocument::BindRepositories): ...this; use it.

2010-04-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement installer function; use per-package file manifests.

	* src/pkgproc.h (pkgManifest): New class; declare it.
	(pkgArchiveProcessor::origin): New protected member variable.
	(pkgArchiveProcessor::sysroot_len): New protected member variable.
	(pkgArchiveProcessor::installed): Type changed to `pkgManifest *'.
	(pkgTarArchiveInstaller::Process): Declare specialisation hook.
	(pkgTarArchiveInstaller::UpdateInstallationManifest): Disused member
	function; remove redundant declaration from class definition.
	(pkgInstall): New generalised installation function; declare it.
	(pkgRegister): New function; declare it.

	* src/pkginst.cpp: New file.
	(pkgManifest, pkgInstall, pkgRegister): Implement them.

	* src/pkgexec.cpp (pkgActionItem::Execute): Use `pkgInstall' in place
	of stub formerly provided here.

	* src/pkgkeys.h (manifest_key, reference_key): New keys; declare them.
	* src/pkgkeys.c (manifest_key, reference_key): Implement them.

	* src/tarproc.cpp: Code refactored.
	(pkgTarArchiveProcessor::sysroot_len): Initialise it.
	(pkgTarArchiveProcessor::origin): Initialise it.
	(pkgTarArchiveProcessor::installed): Initialise; associate it with a