@@ -41,6 +41,16 @@
 #
   AC_PROG_LEX
 
+# Ensure that (at least the headers for) prerequisite libraries,
+# zlib, libbz2 and liblzma are available
+#
+  AC_CHECK_HEADER([zlib.h],,MINGW_AC_ASSERT_MISSING([zlib],
+    [libz-1.2.3-1-mingw32-dev.tar.gz]))
+  AC_CHECK_HEADER([bzlib.h],,MINGW_AC_ASSERT_MISSING([libbz2],
+    [bzip2-1.0.5-2-mingw32-dev.tar.gz]))
+  AC_CHECK_HEADER([lzma.h],,MINGW_AC_ASSERT_MISSING([liblzma],
+    [liblzma-4.999.9beta_20091209-3-mingw32-dev.tar.bz2]))
+
 # Set up the archive librarian, to match our compiler settings
 #
   AC_CHECK_TOOL([AR],[ar],[ar])
